tests/fixtures/invalid/flexible_array_aggregate_field.c
struct Packet {
    int len;
    int data[];
};

int main(void) {
    return 0;
}
